Added BLOG to navigations.

--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
           <a href="#" data-activates="mobile-nav" class="button-collapse"><i class="fa fa-bars" aria-hidden="true"></i></a>
           <ul class="right hide-on-med-and-down">
             <li><a class="menu-text" href="#about">ABOUT</a></li>
+            <li><a class="menu-text" target="_blank" href="https://medium.com/@ethbuenosaires">BLOG</a></li>
             <li><a class="menu-text" href="#speakers-and-judges">SPEAKERS AND JUDGES</a></li>
             <li><a class="menu-text" href="#sponsors">SPONSORS</a></li>
             <li><a class="menu-text" href="#venue">VENUE</a></li>
@@ -73,6 +74,7 @@
           <ul class="side-nav" id="mobile-nav">
             <li><a class="sidenav-close close-link" href="#!">X</a></li>
             <li class="valign-wrapper"><a class="menu-text sidenav-close" href="#about">ABOUT</a></li>
+            <li class="valign-wrapper"><a class="menu-text sidenav-close" target="_blank" href="https://medium.com/@ethbuenosaires">BLOG</a></li>
             <li class="valign-wrapper"><a class="menu-text sidenav-close" href="#speakers-and-judges">SPEAKERS AND JUDGES</a></li>
             <li class="valign-wrapper"><a class="menu-text sidenav-close" href="#sponsors">SPONSORS</a></li>
             <li class="valign-wrapper"><a class="menu-text sidenav-close" href="#venue">VENUE</a></li>
