--- a/index.html
+++ b/index.html
@@ -246,6 +246,11 @@
             <p class="speakers-text">Yondon Fu</p>
             <p class="speakers-subtitle">Software Engineer </br>Livepeer</p>
           </div>
+          <div class="speakers-box">
+            <img src="./images/speakers/dan_nolan.png" class="circle responsive-img speakers-img">
+            <p class="speakers-text">Dan Nolan</p>
+            <p class="speakers-subtitle">Software Developer </br>ChainShot</p>
+          </div>
         </div>
       </div>
     </section>
