--- a/live.html
+++ b/live.html
@@ -2,10 +2,10 @@
 <html lang="en-US">
   <meta charset="utf-8">
   <title>Redirecting&hellip;</title>
-  <link rel="canonical" href="https://instagram.com/ethbuenosaires">
-  <meta http-equiv="refresh" content="0; url=https://instagram.com/ethbuenosaires">
+  <link rel="canonical" href="https://www.youtube.com/channel/UCSFiCr8d3ej_pC57E75pPew">
+  <meta http-equiv="refresh" content="0; url=https://www.youtube.com/channel/UCSFiCr8d3ej_pC57E75pPew">
   <meta name="robots" content="noindex">
   <h1>Redirecting&hellip;</h1>
-  <a href="https://instagram.com/ethbuenosaires">Click here if you are not redirected.</a>
-  <script>location="https://instagram.com/ethbuenosaires"</script>
+  <a href="https://www.youtube.com/channel/UCSFiCr8d3ej_pC57E75pPew">Click here if you are not redirected.</a>
+  <script>location="https://www.youtube.com/channel/UCSFiCr8d3ej_pC57E75pPew"</script>
 </html>
