livestream and devpost

--- a/schedule/index.html
+++ b/schedule/index.html
@@ -71,7 +71,8 @@
             <li><a class="menu-text" href="../#sponsors">SPONSORS</a></li>
             <li><a class="menu-text" href="../#venue">VENUE</a></li>
             <li><a class="menu-text">SCHEDULE</a></li>
-            <!-- <li><a class="menu-text" href="../#faq">FAQ</a></li> -->
+            <li><a class="menu-text" href="https://ethbuenosaires.devpost.com">DEVPOST</a></li>
+            <li><a class="menu-text" href="https://ethbuenosaires.com/live">LIVESTREAM</a></li>
           </ul>
           <ul class="side-nav" id="mobile-nav">
             <li><a class="sidenav-close close-link" href="../#!">X</a></li>
@@ -80,7 +81,8 @@
             <li class="valign-wrapper"><a class="menu-text sidenav-close" href="../#sponsors">SPONSORS</a></li>
             <li class="valign-wrapper"><a class="menu-text sidenav-close" href="../#venue">VENUE</a></li>
             <li class="valign-wrapper"><a class="menu-text sidenav-close">SCHEDULE</a></li>
-            <!-- <li class="valign-wrapper"><a class="menu-text sidenav-close" href="../#faq">FAQ</a></li> -->
+            <li class="valign-wrapper"><a class="menu-text sidenav-close" href="https://ethbuenosaires.devpost.com">DEVPOST</a></li>
+            <li class="valign-wrapper"><a class="menu-text sidenav-close" href="https://ethbuenosaires.com/live">LIVESTREAM</a></li>
           </ul>
         </div>
       </nav>
