--- a/index.html
+++ b/index.html
@@ -255,6 +255,11 @@
             <p class="speakers-text">Dan Nolan</p>
             <p class="speakers-subtitle">Software Developer </br>ChainShot</p>
           </div>
+          <div class="speakers-box">
+            <img src="./images/speakers/chance_du.png" class="circle responsive-img speakers-img">
+            <p class="speakers-text">Chance Du</p>
+            <p class="speakers-subtitle">Founding Partner</br>Coefficient Ventures</p>
+          </div>
         </div>
       </div>
     </section>
@@ -360,6 +365,9 @@
           </a>
           <a href="http://www.zeroknowledge.fm/" target="_blank" alt="Zk" title="Zk" id="sponsor-zk">
             <img src="./images/sponsors/zk.svg" />
+          </a>
+          <a href="http://coefficient.network/" target="_blank" alt="Coefficient Ventures" title="Coefficient Ventures" id="sponsor-coefficient">
+            <img src="./images/sponsors/coefficient.png" />
           </a>
         </div>
       </div>
