--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@
             <p class="speakers-subtitle">Software Developer </br>ChainShot</p>
           </div>
           <div class="speakers-box">
-            <img src="./images/speakers/chance_du.png" class="circle responsive-img speakers-img">
+            <img src="./images/speakers/chance_du.JPG" class="circle responsive-img speakers-img">
             <p class="speakers-text">Chance Du</p>
             <p class="speakers-subtitle">Founding Partner</br>Coefficient Ventures</p>
           </div>
