--- a/live.html
+++ b/live.html
@@ -2,10 +2,10 @@
 <html lang="en-US">
   <meta charset="utf-8">
   <title>Redirecting&hellip;</title>
-  <link rel="canonical" href="https://www.youtube.com/channel/UCSFiCr8d3ej_pC57E75pPew/featured">
-  <meta http-equiv="refresh" content="0; url=https://www.youtube.com/channel/UCSFiCr8d3ej_pC57E75pPew/featured">
+  <link rel="canonical" href="https://www.youtube.com/watch?v=x2XMWk3cizo">
+  <meta http-equiv="refresh" content="0; url=https://www.youtube.com/watch?v=x2XMWk3cizo">
   <meta name="robots" content="noindex">
   <h1>Redirecting&hellip;</h1>
-  <a href="https://www.youtube.com/channel/UCSFiCr8d3ej_pC57E75pPew/featured">Click here if you are not redirected.</a>
-  <script>location="https://www.youtube.com/channel/UCSFiCr8d3ej_pC57E75pPew/featured"</script>
+  <a href="https://www.youtube.com/watch?v=x2XMWk3cizo">Click here if you are not redirected.</a>
+  <script>location="https://www.youtube.com/watch?v=x2XMWk3cizo"</script>
 </html>
